[workspace]
members = ["trixter", "tokio-netem"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
pin-project = "1"
humantime = "2"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
socket2 = "0.5"
smallvec = "1.13"
